[package]
name = "unityfs"
version = "0.1.0"
description = "UnityFS parser"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/unityfs.git"
license = "MIT"
edition = "2018"

[workspace]
members = ["crates/wasm-unityfs", "crates/etcdec"]

[dependencies]
lazy_static = "1.4.0"

[dependencies.nom]
version = "5.0.0"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
