[package]
name = "wasm-unityfs"
version = "0.2.0"
description = "WASM bindings of UnityFS parser"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/unityfs.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
etcdec = { path = "../etcdec/" }
js-sys = "0.3.35"
unityfs = { path = "../../" }
wee_alloc = "0.4.5"

[dependencies.wasm-bindgen]
version = "0.2.58"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.35"
features = ["ImageData"]
