[package]
name = "wasm-unityfs"
version = "0.3.1"
description = "WASM bindings of UnityFS parser"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/unityfs.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
etcdec = { path = "../etcdec/" }
js-sys = "0.3.35"
png = "0.15.3"
unityfs = { path = "../../" }
wee_alloc = "0.4.5"

[dependencies.image]
version = "0.23.0"
default-features = false
features = ["dxt"]

[dependencies.wasm-bindgen]
version = "0.2.58"
