[package]
name = "wasm-unityfs"
version = "0.4.0"
description = "WASM bindings of UnityFS parser"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/unityfs.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
etcdec = { path = "../etcdec/" }
js-sys = "0.3.35"
png = "0.15.3"
unityfs = { path = "../../" }

[dependencies.image]
version = "0.23.0"
default-features = false
features = ["dxt"]

[dependencies.wasm-bindgen]
version = "0.2.58"
